# c-dynamic-array

./: .gitignore  CMakeLists.txt  Makefile  README.md  array.c  array.h
sort/: sort.c  sort.h
tests/: CMakeLists.txt  Makefile  initialization.c  main.c  manipulation.c  test_array  tests.c  tests.h
